--- a/app/_styles/global.css
+++ b/app/_styles/global.css
@@ -1,3 +1,32 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
+.box {
+  box-shadow: 0px 3px 5px #0000000b;
+  background-color: white;
+  border: 1px solid theme("colors.slate.200");
+  border-radius: 0.6rem;
+  position: relative;
+}
+
+.image-fit {
+  position: relative;
+  & > img {
+    position: absolute;
+    object-fit: cover;
+    top: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
