--- a/app/_styles/global.css
+++ b/app/_styles/global.css
@@ -20,13 +20,27 @@ input[type="number"] {
   position: relative;
 }
 
-.image-fit {
-  position: relative;
-  & > img {
-    position: absolute;
-    object-fit: cover;
-    top: 0;
-    width: 100%;
-    height: 100%;
+@layer utilities {
+  .image-fit {
+    position: relative;
+    & > img {
+      position: absolute;
+      object-fit: cover;
+      top: 0;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
   }
 }
